Prevent detail DL DTs from wraping

--- a/app/src/styles/_base.scss
+++ b/app/src/styles/_base.scss
@@ -122,6 +122,7 @@ dd {
 dt {
 	margin-right: 8px;
 	font-weight: 600;
+	flex-shrink: 0;
 }
 
 dd {
